# hermes-plugin-mnemon

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
mnemon/: __init__.py  cli.py  plugin.yaml
tests/: test_mnemon.py
